Add rows and cols structure draft

--- a/index.html
+++ b/index.html
@@ -27,22 +27,46 @@
 
     <body>
         <header>
-            <nav></nav>
+            <!-- Image and text -->
+            <nav class="navbar navbar-light bg-light ">
+                <a class="navbar-brand" href="#">
+                    <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+                    Bootstrap
+                </a>
+            </nav>
         </header>
 
         <main>
-            <section class="sidebar">
-                
-            </section>
+            <!-- Main container -->
+            <div class="container-fluid">
+                <div class="row">
 
-            <section class="main-app-container">
-                <section class="main-app-header">
+                    <!-- Sidebar -->
+                    <div class="col-2 my_sidebar my_test_second ">
 
-                </section>
-                <section class="main-app">
+                    </div>
+                    <!-- End Sidebar -->
 
-                </section>
-            </section>
+                    <!-- App-box -->
+                    <div class="col-10 my_main-app-container my_test_third">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-12 my_header-main-app my_test">
+
+                                </div>
+                                <div class="col-12 my_test_four col-lg-8 my_main-app-l">
+
+                                </div>
+                                <div class="col-12 col-lg-4 my_main-app-r my_test_five">
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!--End App-box -->
+                </div>
+            </div>
 
         </main>
     </body>
