Add page macro structure

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <body>
         <header>
             <!-- Image and text -->
-            <nav class="navbar navbar-light bg-light ">
+            <nav class="navbar navbar-light bg-light my_navbar">
                 <a class="navbar-brand" href="#">
                     <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
                     Bootstrap
@@ -48,16 +48,16 @@
                     <!-- End Sidebar -->
 
                     <!-- App-box -->
-                    <div class="col-10 my_main-app-container my_test_third">
-                        <div class="container-fluid">
+                    <div class="col-10 my_test_third my_main-app-container overflow-y-scroll">
+                        <div class="container-fluid p-0">
                             <div class="row">
-                                <div class="col-12 my_header-main-app my_test">
+                                <div class="col-12 my_header-main-app my_test ">
 
                                 </div>
-                                <div class="col-12 my_test_four col-lg-8 my_main-app-l">
+                                <div class="col-12 my_test_four col-lg-8 my_main-app-l my_col-height">
 
                                 </div>
-                                <div class="col-12 col-lg-4 my_main-app-r my_test_five">
+                                <div class="col-12 col-lg-4 my_main-app-r my_test_five my_col-height">
 
                                 </div>
 
