Add navbar positioning elements structure

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
                     </div>
                 </form>
-                
+
             </nav>
         </header>
 
@@ -57,8 +57,41 @@
                 <div class="row">
 
                     <!-- Sidebar -->
-                    <div class="col-2 my_sidebar my_test_second ">
+                    <div class="col-2 my_test_second ">
+                        <div class="container ">
+                            <div class="row py-4 flex-column justify-content-between my_main-app-container text-light">
+                                <!-- Upper sidebar -->
+                                <div class="col-12 my_test">
+                                    <ul class="list-unstyled ">
+                                        <li>
+                                            <i class="fa-solid fa-house p-1"></i>
+                                            <p class="d-none d-lg-inline-block">Home</p>
+                                        </li>
 
+                                        <li>
+                                            <i class="fa-solid fa-house p-1"></i>
+                                            <p class="d-none d-lg-inline-block">Home</p>
+                                        </li>
+
+                                        <li>
+                                            <i class="fa-solid fa-house p-1"></i>
+                                            <p class="d-none d-lg-inline-block">Home</p>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                                
+                                <!-- Bottom sidebar -->
+                                <div class="col-12 my_test">
+                                    <ul class="list-unstyled ">
+                                        <li>
+                                            <i class="fa-solid fa-house p-1"></i>
+                                            <p class="d-none d-lg-inline-block">Home</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <!-- End Sidebar -->
 
