--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                 <div class="row">
 
                     <!-- Sidebar -->
-                    <div class="col-2 my_test_second ">
+                    <div class="col-2 my_bg-dark-blue">
                         <div class="container ">
-                            <div class="row py-4 flex-column justify-content-between my_main-app-container text-light">
+                            <div class="row pt-4 flex-column justify-content-between my_main-app-container text-light">
                                 <!-- Upper sidebar -->
-                                <div class="col-12 my_test">
+                                <div class="col-12">
                                     <ul class="list-unstyled ">
                                         <li>
                                             <i class="fa-solid fa-house p-1"></i>
@@ -82,7 +82,7 @@
 
                                 
                                 <!-- Bottom sidebar -->
-                                <div class="col-12 my_test">
+                                <div class="col-12">
                                     <ul class="list-unstyled ">
                                         <li>
                                             <i class="fa-solid fa-house p-1"></i>
