--- a/index.html
+++ b/index.html
@@ -99,7 +99,22 @@
                     <div class="col-10 my_test_third my_main-app-container overflow-y-scroll">
                         <div class="container-fluid p-0">
                             <div class="row">
-                                <div class="col-12 my_header-main-app my_test ">
+
+                                <!-- App Blue Header -->
+                                <div class="col-12 my_header-main-app my_test bg-primary">
+                                    <div class="container px-0">
+                                        <div class="row flex-column-reverse flex-md-row justify-content-between">
+                                            <div class="col-12 col-md-4 col-lg-3 my_test">
+                                                <h1>1 lg - 3 sm</h1>
+                                            </div>
+                                            <div class="col-12 col-md-4 col-lg-3 my_test ">
+                                                <h1>2 lg - 2 sm</h1>
+                                            </div>
+                                            <div class="col-12 col-md-4 col-lg-3  my_test">
+                                                <h1>3 lg - 1 sm</h1>
+                                            </div>
+                                        </div>
+                                    </div>
 
                                 </div>
                                 <div class="col-12 my_test_four col-lg-8 my_main-app-l my_col-height">
