Add content to main header & adjust cols position

--- a/index.html
+++ b/index.html
@@ -101,18 +101,33 @@
                             <div class="row">
 
                                 <!-- App Blue Header -->
-                                <div class="col-12 my_header-main-app my_test bg-primary">
-                                    <div class="container px-0">
-                                        <div class="row flex-column-reverse flex-md-row justify-content-between">
-                                            <div class="col-12 col-md-4 col-lg-3 my_test">
-                                                <h1>1 lg - 3 sm</h1>
+                                <div class="col-12 my_header-main-app">
+                                    <div class="container-fluid px-0 mx-0">
+                                        <div class="row justify-content-between   bg-primary py text-light">
+
+                                             <!-- Add Students -->
+                                             <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-end order-md-3">
+                                                <p class="m-0">Nuovo Studente</p>
+                                                <div class="my_sq-icon-container rounded-2 d-flex justify-content-center align-items-center">
+                                                    <a class="text-reset" href="">
+                                                        <i class="fa-solid fa-plus fs-5"></i>
+                                                    </a>
+                                                </div>
                                             </div>
-                                            <div class="col-12 col-md-4 col-lg-3 my_test ">
-                                                <h1>2 lg - 2 sm</h1>
+
+                                            <!-- Boolean apps -->
+                                            <div class="col-12 col-md-4 col-lg-3 order-md-1">
+                                                <h1>Boolean</h1>
                                             </div>
-                                            <div class="col-12 col-md-4 col-lg-3  my_test">
-                                                <h1>3 lg - 1 sm</h1>
+
+                                            <!--Online Students-->
+                                            <div class="col-12 col-md-4 col-lg-3 order-md-2">
+                                                <p>Studenti online negli ultimi 30 minuti</p>
+                                                <h1>125</h1>
                                             </div>
+
+                                           
+
                                         </div>
                                     </div>
 
