Remove useless classes

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                                 </div>
                                 <!-- Main app left -->
-                                <div class="col-12 col-lg-8 my_main-app-l my_col-height">
+                                <div class="col-12 col-lg-8 my_main-app-l">
 
                                     <!-- Table Card-->
                                     <div class="card mb-4">
@@ -220,7 +220,7 @@
                                 </div>
 
                                 <!-- Main app right -->
-                                <div class="col-12 col-lg-4 my_main-app-r my_test_five my_col-height">
+                                <div class="col-12 col-lg-4 my_main-app-r">
 
                                     <!-- Todo list Card -->
                                     <div class="card mb-4">
