--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                         <div class="row justify-content-between   bg-primary py text-light">
 
                                              <!-- Add Students -->
-                                             <div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-end order-md-3">
+                                             <div class="my-3 col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-md-end order-md-3">
                                                 <p class="m-0">Nuovo Studente</p>
                                                 <div class="my_sq-icon-container rounded-2 d-flex justify-content-center align-items-center">
                                                     <a class="text-reset" href="">
@@ -116,12 +116,48 @@
                                             </div>
 
                                             <!-- Boolean apps -->
-                                            <div class="col-12 col-md-4 col-lg-3 order-md-1">
-                                                <h1>Boolean</h1>
+                                            <div class="my-3 col-12 col-md-4 col-lg-6 order-md-1">
+                                                <div class="d-flex align-items-center">
+                                                    <h1 class="me-3">Boolean</h1>
+                                                    <ul class="nav nav-pills">
+                                                        <li class="my-bg-md-blue text-light rounded-pill">
+                                                            <a class="text-reset text-decoration-none p-2" href="#">Piano blaze</a>
+                                                        </li>
+                                                    </ul> 
+                                                </div>
+
+                                                <div class="d-flex align-items-center">
+                                                    <ul class="nav nav-pills">
+                                                        <li class="my-bg-md-blue text-light rounded-pill m-1">
+                                                            <a class="text-reset text-decoration-none p-2" href="#">3 app</a>
+                                                        </li>
+                                                        <li class="m-1">
+                                                            <i class="fa-solid fa-angles-right"></i>
+                                                        </li>
+
+                                                        <!-- Display only in lg -->
+                                                        <li class="d-none d-lg-inline-block my-bg-md-blue text-light rounded-pill m-1">
+                                                            <a class="text-reset text-decoration-none p-2" href="#">Boolean mobile app</a>
+                                                        </li>
+                                                        <li class="d-none d-lg-inline-block my-bg-md-blue text-light rounded-pill m-1">
+                                                            <a class="text-reset text-decoration-none p-2" href="#">Boolean web app</a>
+                                                        </li>
+                                                        <li class="d-none d-lg-inline-block my-bg-md-blue text-light rounded-pill m-1">
+                                                            <a class="text-reset text-decoration-none p-2" href="#">Boolean blog app</a>
+                                                        </li>
+                                                        <!-- End display only in lg -->
+
+                                                        <li class="d-lg-none my-bg-md-blue text-light me-1 rounded-circle ">
+                                                            <a class="text-reset text-decoration-none" href="#">
+                                                                <i class=" fa-solid fa-plus fs-5"></i>
+                                                            </a>
+                                                        </li>
+                                                    </ul> 
+                                                </div>
                                             </div>
 
                                             <!--Online Students-->
-                                            <div class="col-12 col-md-4 col-lg-3 order-md-2">
+                                            <div class="my-3 col-12 col-md-4 col-lg-3 order-md-2">
                                                 <p>Studenti online negli ultimi 30 minuti</p>
                                                 <h1>125</h1>
                                             </div>                                           
