Add sidebar content

--- a/index.html
+++ b/index.html
@@ -57,25 +57,25 @@
                 <div class="row">
 
                     <!-- Sidebar -->
-                    <div class="col-2 my_bg-dark-blue">
+                    <div class="col-2 my_bg-dark-blue my_sidebar">
                         <div class="container ">
                             <div class="row pt-4 flex-column justify-content-between my_main-app-container text-light">
                                 <!-- Upper sidebar -->
                                 <div class="col-12">
                                     <ul class="list-unstyled ">
-                                        <li>
+                                        <li class="my_sidebar-li">
                                             <i class="fa-solid fa-house p-1"></i>
                                             <p class="d-none d-lg-inline-block">Home</p>
                                         </li>
 
-                                        <li>
-                                            <i class="fa-solid fa-house p-1"></i>
-                                            <p class="d-none d-lg-inline-block">Home</p>
+                                        <li class="my_sidebar-li">
+                                            <i class="fa-solid fa-chart-simple p-11"></i>
+                                            <p class="d-none d-lg-inline-block">Stats</p>
                                         </li>
 
-                                        <li>
-                                            <i class="fa-solid fa-house p-1"></i>
-                                            <p class="d-none d-lg-inline-block">Home</p>
+                                        <li class="my_sidebar-li">
+                                            <i class="fa-solid fa-signal p-1"></i>
+                                            <p class="d-none d-lg-inline-block">Signal</p>
                                         </li>
                                     </ul>
                                 </div>
@@ -84,9 +84,9 @@
                                 <!-- Bottom sidebar -->
                                 <div class="col-12">
                                     <ul class="list-unstyled ">
-                                        <li>
-                                            <i class="fa-solid fa-house p-1"></i>
-                                            <p class="d-none d-lg-inline-block">Home</p>
+                                        <li class="my_sidebar-li">
+                                            <i class="fa-solid fa-gear p-1"></i>
+                                            <p class="d-none d-lg-inline-block">Admin</p>
                                         </li>
                                     </ul>
                                 </div>
