Add table content and style

--- a/index.html
+++ b/index.html
@@ -185,30 +185,145 @@
                                             <table class="table">
                                                 <thead>
                                                   <tr>
-                                                    <th scope="col">#</th>
-                                                    <th scope="col">First</th>
-                                                    <th scope="col">Last</th>
-                                                    <th scope="col">Handle</th>
+                                                    <th class="my_table-name" scope="col">Nome</th>
+                                                    <th scope="col">Data inizio</th>
+                                                    <th scope="col">ROI</th>
+                                                    <th scope="col">Stato</th>
+                                                    <th scope="col">Azioni</th>
+
                                                   </tr>
                                                 </thead>
                                                 <tbody>
-                                                  <tr>
-                                                    <th scope="row">1</th>
-                                                    <td>Mark</td>
-                                                    <td>Otto</td>
-                                                    <td>@mdo</td>
-                                                  </tr>
-                                                  <tr>
-                                                    <th scope="row">2</th>
-                                                    <td>Jacob</td>
-                                                    <td>Thornton</td>
-                                                    <td>@fat</td>
-                                                  </tr>
-                                                  <tr>
-                                                    <th scope="row">3</th>
-                                                    <td colspan="2">Larry the Bird</td>
-                                                    <td>@twitter</td>
-                                                  </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <img class="my_class-avatar me-2" src="img/class-avatar.jpg" alt="class avatar logo">
+                                                            Classe 75</td>
+                                                        <td>15 Feb 2021</td>
+                                                        <td>20%</td>
+                                                        <td><span class="badge badge-success bg-success">Done</span></td>
+                                                        <td class="d-flex">
+                                                            <button type="button" class="btn btn-outline-secondary p-1 me-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-pencil fa-xs text-secondary"></i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-outline-secondary p-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-trash fa-xs text-secondary"></i>
+                                                            </button>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <img class="my_class-avatar me-2" src="img/class-avatar.jpg" alt="class avatar logo">
+                                                            Classe 75</td>
+                                                        <td>15 Feb 2021</td>
+                                                        <td>20%</td>
+                                                        <td><span class="badge badge-success bg-success">Done</span></td>
+                                                        <td class="d-flex">
+                                                            <button type="button" class="btn btn-outline-secondary p-1 me-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-pencil fa-xs text-secondary"></i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-outline-secondary p-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-trash fa-xs text-secondary"></i>
+                                                            </button>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <img class="my_class-avatar me-2" src="img/class-avatar.jpg" alt="class avatar logo">
+                                                            Classe 75</td>
+                                                        <td>15 Feb 2021</td>
+                                                        <td>20%</td>
+                                                        <td><span class="badge badge-success bg-success">Done</span></td>
+                                                        <td class="d-flex">
+                                                            <button type="button" class="btn btn-outline-secondary p-1 me-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-pencil fa-xs text-secondary"></i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-outline-secondary p-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-trash fa-xs text-secondary"></i>
+                                                            </button>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <img class="my_class-avatar me-2" src="img/class-avatar.jpg" alt="class avatar logo">
+                                                            Classe 75</td>
+                                                        <td>15 Feb 2021</td>
+                                                        <td>20%</td>
+                                                        <td><span class="badge badge-success bg-success">Done</span></td>
+                                                        <td class="d-flex">
+                                                            <button type="button" class="btn btn-outline-secondary p-1 me-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-pencil fa-xs text-secondary"></i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-outline-secondary p-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-trash fa-xs text-secondary"></i>
+                                                            </button>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <img class="my_class-avatar me-2" src="img/class-avatar.jpg" alt="class avatar logo">
+                                                            Classe 75</td>
+                                                        <td>15 Feb 2021</td>
+                                                        <td>20%</td>
+                                                        <td><span class="badge badge-success bg-success">Done</span></td>
+                                                        <td class="d-flex">
+                                                            <button type="button" class="btn btn-outline-secondary p-1 me-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-pencil fa-xs text-secondary"></i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-outline-secondary p-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-trash fa-xs text-secondary"></i>
+                                                            </button>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <img class="my_class-avatar me-2" src="img/class-avatar.jpg" alt="class avatar logo">
+                                                            Classe 75</td>
+                                                        <td>15 Feb 2021</td>
+                                                        <td>20%</td>
+                                                        <td><span class="badge badge-success bg-success">Done</span></td>
+                                                        <td class="d-flex">
+                                                            <button type="button" class="btn btn-outline-secondary p-1 me-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-pencil fa-xs text-secondary"></i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-outline-secondary p-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-trash fa-xs text-secondary"></i>
+                                                            </button>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <img class="my_class-avatar me-2" src="img/class-avatar.jpg" alt="class avatar logo">
+                                                            Classe 75</td>
+                                                        <td>15 Feb 2021</td>
+                                                        <td>20%</td>
+                                                        <td><span class="badge badge-success bg-success">Done</span></td>
+                                                        <td class="d-flex">
+                                                            <button type="button" class="btn btn-outline-secondary p-1 me-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-pencil fa-xs text-secondary"></i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-outline-secondary p-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-trash fa-xs text-secondary"></i>
+                                                            </button>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>
+                                                            <img class="my_class-avatar me-2" src="img/class-avatar.jpg" alt="class avatar logo">
+                                                            Classe 75</td>
+                                                        <td>15 Feb 2021</td>
+                                                        <td>20%</td>
+                                                        <td><span class="badge badge-success bg-success">Done</span></td>
+                                                        <td class="d-flex">
+                                                            <button type="button" class="btn btn-outline-secondary p-1 me-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-pencil fa-xs text-secondary"></i>
+                                                            </button>
+                                                            <button type="button" class="btn btn-outline-secondary p-1 my_table_button d-flex align-items-center justify-content-center">
+                                                                <i class="fa-solid fa-trash fa-xs text-secondary"></i>
+                                                            </button>
+                                                        </td>
+                                                    </tr>
+                                                    
+
                                                 </tbody>
                                               </table>
                                         </div>
