Add todo card style and content

--- a/index.html
+++ b/index.html
@@ -421,22 +421,25 @@
                                     </div>
 
                                     <!-- Graphics -->
-                                    <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top" src="img/stats.jpeg" alt="Card image cap">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                        </div>
-                                        <ul class="list-group list-group-flush">
-                                            <li class="list-group-item">Cras justo odio</li>
-                                            <li class="list-group-item">Dapibus ac facilisis in</li>
-                                            <li class="list-group-item">Vestibulum at eros</li>
-                                        </ul>
-                                        <div class="card-body">
-                                            <a href="#" class="card-link">Card link</a>
-                                            <a href="#" class="card-link">Another link</a>
-                                        </div>
-                                      </div>
+                                    <div class="card">
+                                        <div class="card m-3" >
+                                            <img class="card-img-top" src="img/stats.jpeg" alt="Card image cap">
+                                            <div class="card-body">
+                                                <h5 class="card-title my_h5">Utenti attivi</h5>
+                                                <p class="card-text">
+                                                    Lista degli utenti attivi in piattaforma questo mese
+                                                </p>
+                                            </div>
+                                            <ul class="list-group list-group-flush my-0">
+                                                <li class="list-group-item py-1">Gennaio: 1200</li>
+                                                <li class="list-group-item py-1">Febbraio: 800</li>
+                                                <li class="list-group-item py-1">Marzo: 1500</li>
+                                            </ul>
+                                            <div class="card-body py-2">
+                                                <a href="#" class="card-lin py-1">Visualizza report approfondito</a>
+                                            </div>
+                                          </div>
+                                    </div>
                                     
                                 </div>
 
