Edit offcanvas dimensions

--- a/index.html
+++ b/index.html
@@ -182,11 +182,7 @@
   
                     <button
                       class="btn btn-primary my_sq-icon-container rounded-2 d-flex justify-content-center align-items-center"
-                      type="button"
-                      data-bs-toggle="offcanvas"
-                      data-bs-target="#offcanvasRight"
-                      aria-controls="offcanvasRight"
-                    >
+                      type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
                       <i class="fa-solid fa-plus fs-5"></i>
                     </button>
                     
@@ -388,7 +384,7 @@
             <!-- End main app blue header -->
   
             <!-- main app cards -->
-            <div class="row h-100 p-3">
+            <div class="row h-100 p-3 m-0">
               <!-- Main app left -->
               <div class="col-12 col-lg-8 my_main-app-l my-text">
                 <!-- Table Card-->
